k8s-manifests/apps/ledger-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ledger
  namespace: attestry
  labels:
    app.kubernetes.io/name: ledger
    app.kubernetes.io/part-of: attestry
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: ledger
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ledger
        app.kubernetes.io/part-of: attestry
    spec:
      nodeSelector:
        workload: app-services
      imagePullSecrets:
        - name: ghcr-credentials
      containers:
        - name: ledger
          image: ghcr.io/attestry/ledger-service:97f16d78f8ac
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
              name: http
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6
